--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <style>
+        .image {
+            display: grid;
+            height: 100%;
+        }
+        .center-fit {
+            max-width: 100%;
+            max-height: 100vh;
+            margin: auto;
+        }
+    </style>
 </head>
 <body>
     <h1 id="Title">Mausam Tiwari</h1>
     <p><em>Failure is inevitable. What you can do is just anticipate the failure, handle it properly, learn form what went wrong and manage it.</em></p>
-    <p><img src="https://github.com/ErAsuratya/markdown-challenge/blob/master/Me.jpg" alt="Me"></p>
+    <div class = "image">
+        <img class = "center-fit" src="Me.jpg" alt="Me">
+    </div>
     <h2 id="Bio">I am a humble, hard working, motivated and tech-savvy person having a great interest in web development, app development and database management.</h2>
     <table>
     <thead>
