--- a/index.html
+++ b/index.html
@@ -1,41 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <style>
-        .image {
-            display: grid;
-            height: 100%;
-        }
-        .center-fit {
-            max-width: 100%;
-            max-height: 100vh;
-            margin: auto;
-        }
-    </style>
+    <title>
+    </title>
 </head>
 <body>
     <h1 id="Title">Mausam Tiwari</h1>
     <p><em>Failure is inevitable. What you can do is just anticipate the failure, handle it properly, learn form what went wrong and manage it.</em></p>
-    <div class = "image">
-        <img class = "center-fit" src="Me.jpg" alt="Me">
-    </div>
+
+    <img src="Me.jpg" height = "600" width = "700" align = "center" alt="Me">
+
     <h2 id="Bio">I am a humble, hard working, motivated and tech-savvy person having a great interest in web development, app development and database management.</h2>
+
     <table>
-    <thead>
-    <tr>
-    <th>Birthday</th>
-    <th>Favourite color</th>
-    <th>Favourite food</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-    <td>01/09/1995</td>
-    <td>Black,White,Gray</td>
-    <td>Dumplings</td>
-    <td><ul><li>[x] Yes. Am I accepted? 😜 </li> <li>[ ] No</li> </ul></td>
-    </tr>
-    </tbody>
+        <thead>
+        <tr>
+        <th>Birthday</th>
+        <th>Favourite color</th>
+        <th>Favourite food</th>
+        <th>Pineapple on pizza?</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+        <td>01/09/1995</td>
+        <td>Black,White,Gray</td>
+        <td>Dumplings</td>
+        <td><ul><li>[x] Yes. Am I accepted? 😜 </li> <li>[ ] No</li> </ul></td>
+        </tr>
+        </tbody>
     </table>
     <h3 id="hobbies">Hobbies</h3>
     <ul>
@@ -67,6 +60,8 @@
         I called one of my friends who were with me last night as I had no idea what I had done. Only then, I came to know that I did some HIT workouts 😀. I had done 60 push ups, tried one hand push up and even hung upon a branch of tree to try pull ups, which I don't even try when I am sober. I did not beleive him until I saw the video of me doing such stupidity. </p>
     <h5 id="tldr">TLDR</h5>
     <p>  I possess super powers when I am drunk. 💪   </p>
+
+
     <p> << <a href="https://github.com/WiseCoding/BeCode/blob/master/markdown-challenge/README.md">Mattias</a> ||
            <a href="https://github.com/ErAsuratya/markdown-challenge/blob/master/README.md">Mausam</a> ||
            <a href="https://github.com/miroslavveljanoski/markdown-challenge/blob/master/README.md">Miroslav</a> >> </p>
