--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang ="en">
 <head>
-    <title>
+    <meta charset="utf-8">
+    <title> My Story
     </title>
 </head>
 <body>
     <h1 id="Title">Mausam Tiwari</h1>
     <p><em>Failure is inevitable. What you can do is just anticipate the failure, handle it properly, learn form what went wrong and manage it.</em></p>
 
-    <img src="Me.jpg" height = "600" width = "700" align = "center" alt="Me">
+    <img src="Me.jpg" height = "600" width = "700" alt="Me">
 
     <h2 id="Bio">I am a humble, hard working, motivated and tech-savvy person having a great interest in web development, app development and database management.</h2>
 
@@ -62,9 +63,9 @@
     <p>  I possess super powers when I am drunk. 💪   </p>
 
 
-    <p> << <a href="https://github.com/WiseCoding/BeCode/blob/master/markdown-challenge/README.md">Mattias</a> ||
+    <p> &lt;&lt; <a href="https://github.com/WiseCoding/BeCode/blob/master/markdown-challenge/README.md">Mattias</a> ||
            <a href="https://github.com/ErAsuratya/markdown-challenge/blob/master/README.md">Mausam</a> ||
-           <a href="https://github.com/miroslavveljanoski/markdown-challenge/blob/master/README.md">Miroslav</a> >> </p>
+           <a href="https://github.com/miroslavveljanoski/markdown-challenge/blob/master/README.md">Miroslav</a> &gt;&gt;</p>
 
 </body>
 </html>
