--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     <p>  I possess super powers when I am drunk. 💪   </p>
 
 
-    <p> &lt;&lt; <a href="https://github.com/WiseCoding/BeCode/blob/master/markdown-challenge/README.md">Mattias</a> ||
-           <a href="https://github.com/ErAsuratya/markdown-challenge/blob/master/README.md">Mausam</a> ||
+    <p> &lt;&lt; <a href="https://github.com/WiseCoding/markdown-to-html">Mattias</a> ||
+           <a href="https://github.com/ErAsuratya/markdown-to-html">Mausam</a> ||
            <a href="https://github.com/miroslavveljanoski/markdown-challenge/blob/master/README.md">Miroslav</a> &gt;&gt;</p>
 
 </body>
